--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ https://templatemo.com/tm-526-vanilla
                       <div id="tab5">
                         <img src="#" alt="">
                         <p>Normal <br> 
-                            Safe +7 and Breaks to Crystall after it. <br><br>Crystall Scrolls: Weapon/Armor/Jewelry <br> From +7 to +9 = 90% <br> From +9 to +13 = 85% <br> From +13 to +16 = 80% <br> From +16 to +20 = 60% <br> From +20 to +25 = 40%<br> Blessed Scrolls: Weapon/Armor/Jewelry <br> From +7 to +16 = 100% <br> From +16 to +20 = 90% <br> From +20 every next chant rate drops by 5% and for +25 chance is </p>
+                            Safe +7 and Breaks to Crystall after it. <br><br>Crystall Scrolls: Weapon/Armor/Jewelry <br> From +7 to +9 = 90% <br> From +9 to +13 = 85% <br> From +13 to +16 = 80% <br> From +16 to +20 = 60% <br> From +20 to +25 = 40%<br> Blessed Scrolls: Weapon/Armor/Jewelry <br> From +7 to +16 = 100% <br> From +16 to +20 = 90% <br> From +20 every next chant rate drops by 5% and for +25 chance is 50% </p>
                       </div>
                     </section>
                     </div>
