--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
+        <link rel="icon" href="/img/favicon.jpg" type="image/gif" sizes="16x16">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/fontAwesome.css">
         <link rel="stylesheet" href="css/hero-slider.css">
@@ -114,7 +114,7 @@ https://templatemo.com/tm-526-vanilla
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/Shot00000.jpg" data-lightbox="image-1"><img src="img/Shot00001.jpg" alt=""></a>
+                                <a href="img/Shot00016.jpg" data-lightbox="image-1"><img src="img/Shot000166.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Dread/Titanium</h4>
                                     <span>Tier 1</span>
@@ -123,7 +123,7 @@ https://templatemo.com/tm-526-vanilla
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/Shot00000.jpg" data-lightbox="image-1"><img src="img/Shot00001.jpg" alt=""></a>
+                                <a href="img/Shot00017.jpg" data-lightbox="image-1"><img src="img/Shot000177.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Dynasty</h4>
                                     <span>Tier 2</span>
@@ -132,7 +132,7 @@ https://templatemo.com/tm-526-vanilla
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/Shot00000.jpg" data-lightbox="image-1"><img src="img/Shot00001.jpg" alt=""></a>
+                                <a href="img/Shot00018.jpg" data-lightbox="image-1"><img src="img/Shot000188.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Abyssal</h4>
                                     <span>Tier 3</span>
@@ -141,7 +141,7 @@ https://templatemo.com/tm-526-vanilla
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/Shot00000.jpg" data-lightbox="image-1"><img src="img/Shot00001.jpg" alt=""></a>
+                                <a href="img/Shot00019.jpg" data-lightbox="image-1"><img src="img/Shot000199.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Rykross</h4>
                                     <span>Tier 4</span>
@@ -293,7 +293,7 @@ https://templatemo.com/tm-526-vanilla
                       <div id="tab5">
                         <img src="#" alt="">
                         <p>Normal <br> 
-                            Safe +7 and Breaks to Crystall after it. <br><br>Crystall Scrolls: Weapon/Armor/Jewelry <br> From +7 to +9 = 90% <br> From +9 to +13 = 85% <br> From +13 to +16 = 80% <br> From +16 to +20 = 60% <br> From +20 to +25 = 40%<br> Blessed Scrolls: Weapon/Armor/Jewelry <br> From +7 to +16 = 100% <br> From +16 to +20 = 90% <br> From +20 every next chant rate drops by 5% and for +25 chance is </p>
+                            Safe +7 and Breaks to Crystall after it. <br><br>Crystall Scrolls: Weapon/Armor/Jewelry <br> From +7 to +9 = 90% <br> From +9 to +13 = 85% <br> From +13 to +16 = 80% <br> From +16 to +20 = 60% <br> From +20 to +25 = 40%<br> Blessed Scrolls: Weapon/Armor/Jewelry <br> From +7 to +16 = 100% <br> From +16 to +20 = 90% <br> From +20 every next chant rate drops by 5% and for +25 chance is 50% </p>
                       </div>
                     </section>
                     </div>
