--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ https://templatemo.com/tm-526-vanilla
             <li class="nav-item"><a class="nav-link" href="#home"><span>INTRO</span></a></li>
             <li class="nav-item"><a class="nav-link" href="#services"><span>SERVICES</span></a></li>
             <li class="nav-item"><a class="nav-link" href="#portfolio"><span>GALLERY</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="#our-story"><span>SERVER FEATURES</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="#server-features"><span>SERVER FEATURES</span></a></li>
           
         </ul>
     </div>
@@ -66,7 +66,7 @@ https://templatemo.com/tm-526-vanilla
                             <br>
                             <a href="#portfolio" target="_blank">JOIN OUR FANPAGE <i class="fab fa-facebook fa-2x"></i></a>
                             <br>
-                            <a href="#our-story">LEARN MORE ABOUT US</a>
+                            <a href="#server-features">LEARN MORE ABOUT US</a>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@ https://templatemo.com/tm-526-vanilla
                             <div class="service-item primary-button">
                                 <h4>Enchant Scrolls and Rate</h4>
                                 <div class="line-dec"></div>
-                                <p>Safe +7 / Max + 25 <br> Normal scrolls breaks after +7 <br> Crystall scrolls and Blessed are safe on failure. For Enchant Rate chance check here <a href="#our-story">Enchant</a></p>
+                                <p>Safe +7 / Max + 25 <br> Normal scrolls breaks after +7 <br> Crystall scrolls and Blessed are safe on failure. For Enchant Rate chance check here <a href="#server-features">Enchant</a></p>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -191,7 +191,7 @@ https://templatemo.com/tm-526-vanilla
     </div>
 
 
-    <div class="tabs-content" id="our-story">
+    <div class="tabs-content" id="server-features">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mx-auto">
