--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-526-vanilla
                             <li>-  Starting level 80</li>
                         </ul>
                         <div class="primary-button">
-                            <a href="https://discord.gg/bz9r5ck99Y" target="_blank">JOIN OUR DISCORD <i class="fab fa-discord fa-2x"></i></a>
+                            <a href="https://discord.gg/B6HwuTvP" target="_blank">JOIN OUR DISCORD <i class="fab fa-discord fa-2x"></i></a>
                             <br>
                             <a href="#portfolio" target="_blank">JOIN OUR FANPAGE <i class="fab fa-facebook fa-2x"></i></a>
                             <br>
