--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ https://templatemo.com/tm-526-vanilla
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/Shot00000.jpg" data-lightbox="image-1"><img src="img/Shot00001.jpg" alt=""></a>
+                                <a href="img/Shot00000.jpg" data-lightbox="image-1"><img src="img/heroglow.png" alt=""></a>
                                 <div class="text-content">
                                     <h4>Relics</h4>
                                     <span>End Tier</span>
