--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@ https://templatemo.com/tm-526-vanilla
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/Shot00000.jpg" data-lightbox="image-1"><img src="img/heroglow.png" alt=""></a>
+                                <a href="" data-lightbox="image-1"><img src="img/heroglow.png" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Relics</h4>
-                                    <span>End Tier</span>
+                                    <h4>Custom Hero Glow</h4>
+                                    <span>Hero</span>
                                 </div>
                             </div>
                         </div>
@@ -168,7 +168,7 @@ https://templatemo.com/tm-526-vanilla
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/Shot00000.jpg" data-lightbox="image-1"><img src="img/Shot00001.jpg" alt=""></a>
+                                <a href="img/Shot00009.jpg" data-lightbox="image-1"><img src="img/Shot00009.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Example 1</h4>
                                     <span>Test</span>
