--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@ https://templatemo.com/tm-526-vanilla
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/Shot00000.jpg" data-lightbox="image-1"><img src="img/Shot00001.jpg" alt=""></a>
+                                <a href="img/Shot00009.jpg" data-lightbox="image-1"><img src="img/Shot00009.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Tattoo</h4>
-                                    <span>End Tier</span>
+                                    <h4>Giran Town Renewed</h4>
+                                    <span>Giran Town</span>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/Shot00009.jpg" data-lightbox="image-1"><img src="img/Shot00009.jpg" alt=""></a>
+                                <a href="img/mats.png" data-lightbox="image-1"><img src="img/mats.png" alt=""></a>
                                 <div class="text-content">
                                     <h4>Example 1</h4>
                                     <span>Test</span>
