--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ https://templatemo.com/tm-526-vanilla
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="" data-lightbox="image-1"><img src="img/heroglow.png" alt=""></a>
+                                <a href="img/heroglow.png" data-lightbox="image-1"><img src="img/heroglow.png" alt=""></a>
                                 <div class="text-content">
                                     <h4>Custom Hero Glow</h4>
                                     <span>Hero</span>
@@ -170,8 +170,8 @@ https://templatemo.com/tm-526-vanilla
                             <div class="testimonials-item">
                                 <a href="img/mats.png" data-lightbox="image-1"><img src="img/mats.png" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Example 1</h4>
-                                    <span>Test</span>
+                                    <h4>Materials</h4>
+                                    <span>Materials</span>
                                 </div>
                             </div>
                         </div>
