--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ https://templatemo.com/tm-526-vanilla
         <div class="container">
             <div class="first-content">
                 <h1>L2SKY</h1>
-                <span><em>Interlude</em> PRIDE STYLE</span>
+                <span><em>Interlude</em> PRIDE STYLE</span><br>
+                <span>FEBRUARY <em>2021</em></span>
                 <div class="primary-button">
                     <a href="#services">Discover More</a>
                 </div>
